--- a/app/assets/javascripts/spree/frontend/variant_options_script.js.erb
+++ b/app/assets/javascripts/spree/frontend/variant_options_script.js.erb
@@ -190,7 +190,14 @@ function VariantOptions(params) {
 
   function toggle(variants) {
     if (variant) {
+      old_value = $('#variant_id, form[data-form-type="variant"] input[name$="[variant_id]"]').val();
       $('#variant_id, form[data-form-type="variant"] input[name$="[variant_id]"]').val(variant.id);
+
+      //compare old value to prevent double triger to change
+      if(old_value != variant.id){
+        $('#variant_id, form[data-form-type="variant"] input[name$="[variant_id]"]').trigger("change");
+      }
+
       $('#product-price .price').removeClass('unselected').text(variant.price);
       if (variant.in_stock)
         $('#cart-form button[type=submit]').attr('disabled', false).fadeTo(100, 1);
@@ -266,6 +273,6 @@ function VariantOptions(params) {
         selection.addClass('out-of-stock').attr('title', i18n.out_of_stock);
     });
   };
-  $(document).ready(init);
 
+  $(document).ready(init);
 };
